--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -11,7 +11,7 @@ endif()
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-file(GLOB_RECURSE VRO_SOURCES "src/*.ixx")
+file(GLOB_RECURSE VRO_SOURCES "src/*.ixx" "src/*.cpp")
 file(GLOB_RECURSE SHADERS "src/*.vert" "src/*.frag")
 
 set(SHADER_OUT_DIR ${CMAKE_CURRENT_LIST_DIR}/shaders) 
@@ -35,5 +35,7 @@ endforeach()
 add_custom_target(compile_shaders ALL DEPENDS ${SPIRV_SHADERS})
 
 add_executable(vro ${VRO_SOURCES})
+add_dependencies(vro compile_shaders)
+set_property(TARGET vro PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
 target_include_directories(vro PUBLIC "$ENV{VULKAN_SDK}/Include")
 target_link_libraries(vro "$ENV{VULKAN_SDK}/Lib/vulkan-1.lib")
